--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 excerpt_separator: <!--more-->
-
+disqus:
+  shortname : qambium
 # Build settings
 markdown: kramdown
 #theme: minima
