--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: marcusbonus67@gmail.com
 author : Marc Muller
 description: Transforme la bière en code... et en toutes sortes de choses fort sympatiques.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://qambium.fr" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 excerpt_separator: <!--more-->
