Changement du thème ... 	modified:   .gitignore 	modified:   _config.yml 	modified:   _data/applications.yml 	modified:   _data/members.yml 	modified:   _includes/date.html 	modified:   _includes/footer.html 	modified:   _includes/navbar.html 	modified:   _layouts/blog.html 	new file:   _layouts/dashboard.html 	modified:   _layouts/home.html 	modified:   _layouts/post.html 	modified:   _posts/2018-11-23-fabrictation-du-poullailler.md 	new file:   _posts/2018-12-01-mes-applications.md 	new file:   _posts/2018-12-01-woodstock.js-presentation.md 	modified:   _site/404.html 	modified:   _site/about/index.html 	modified:   _site/assets/css/Qambium.css 	new file:   _site/blog/apps/mes-applications.html 	new file:   _site/blog/apps/woodstock.js-presentation.html 	renamed:    _site/bricolage/2018/11/20/encore-un-essai.html -> _site/blog/bricolage/encore-un-essai.html 	renamed:    _site/bricolage/2018/11/23/fabrictation-du-poullailler.html -> _site/blog/bricolage/fabrictation-du-poullailler.html 	modified:   _site/blog/index.html 	renamed:    _site/jekyll/update/2015/07/04/welcome-to-jekyll.html -> _site/blog/jekyll/update/welcome-to-jekyll.html 	modified:   _site/contact/index.html 	new file:   _site/dashboard/index.html 	modified:   _site/feed.xml 	modified:   _site/index.html 	modified:   assets/css/Qambium.css 	new file:   dashboard.md

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,9 @@ description: Transforme la bière en code... et en toutes sortes de choses fort 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://qambium.fr" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  marxus95
 excerpt_separator: <!--more-->
+permalink: /blog/:categories/:title
 disqus:
   shortname : qambium
 # Build settings
