--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,6 +1,6 @@
 Marcus :
   name : Marc Muller
-  description : "Créateur du site Qambium. Me décrire ? Je comprends vite, mais il faut expliquer longtemps ! :)"
+  description : "Créateur du site Qambium. Je comprends vite, mais il faut expliquer longtemps ! :)"
   social :
     email : marc.muller@qambium.fr
     instagram : https://www.instagram.com/marcusbonus67/
