Changements provisoires pour un rendu public... 	modified:   _config.yml 	modified:   _data/applications.yml 	modified:   _includes/footer.html 	modified:   _includes/navbar.html 	new file:   _layouts/applications.html 	modified:   _layouts/blog.html 	modified:   _layouts/default.html 	new file:   _layouts/default.save.html 	modified:   _layouts/home.html 	copied:     _layouts/home.html -> _layouts/home.save.html 	modified:   _layouts/post.html 	modified:   _posts/2015-07-04-welcome-to-jekyll.md 	modified:   _posts/2018-11-20-site-en-cours-de-construction.md 	modified:   _posts/2018-11-23-fabrictation-du-poullailler.md 	modified:   _posts/2018-12-01-mes-applications.md 	modified:   _posts/2018-12-01-woodstock.js-presentation.md 	modified:   _site/404.html 	modified:   _site/about/index.html 	new file:   _site/applications/index.html 	modified:   _site/assets/css/Qambium.css 	modified:   _site/blog/apps/mes-applications.html 	modified:   _site/blog/apps/woodstock.js-presentation.html 	modified:   _site/blog/bricolage/fabrictation-du-poullailler.html 	modified:   _site/blog/home/site-en-cours-de-construction.html 	modified:   _site/blog/index.html 	modified:   _site/blog/jekyll/update/welcome-to-jekyll.html 	modified:   _site/contact/index.html 	modified:   _site/dashboard/index.html 	modified:   _site/feed.xml 	modified:   _site/index.html 	new file:   applications.md 	modified:   assets/css/Qambium.css

--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Qambium
-email: marcusbonus67@gmail.com
+email: marcmul@icloud.com
 author : Marc Muller
 description: Transforme la bière en code... et en toutes sortes de choses fort sympatiques.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://qambium.fr" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  marxus95
-excerpt_separator: <!--more-->
+# excerpt_separator: <!--more-->
 permalink: /blog/:categories/:title
 disqus:
   shortname : qambium
