--- a/_data/applications.yml
+++ b/_data/applications.yml
@@ -1,3 +1,10 @@
+- name: SQolites
+  github: Qambium/SQolites
+  link : https://qambium.fr/SQolites
+  description : >-
+    Plateforme de visualisation de l'évolution d'Ips Typographus...
+  more : '/programmation/2018-12-01-woodstock-js.html'
+
 - name: Woodstock.js
   github: Qambium/Woodstock.js
   link : https://qambium.github.io/Woodstock.js
