--- a/_data/applications.yml
+++ b/_data/applications.yml
@@ -1,6 +1,6 @@
-- name: SQolites
-  github: Qambium/SQolites
-  link : https://qambium.fr/SQolites
+- name: SQolytes
+  github: Qambium/SQolytes
+  link : https://qambium.fr/SQolytes
   description : >-
     Plateforme de visualisation de l'évolution d'Ips Typographus...
   more : '/programmation/2018-12-01-woodstock-js.html'
